# LEXIS-X5-

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: __init__.py  upload.py
backend/tests/: test_upload.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
