[project]
name = "lexis-x5-backend"
version = "0.1.0"
description = "LEXIS-X5 — Document Intelligence Agentique pour la SST (backend)"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "opendataloader-pdf>=0.9.0",
    "anthropic>=0.40.0",
    "supabase>=2.0.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
